# soomfonLinux

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  device_support.md  feature_request.md
.github/workflows/: ci.yml
crates/soomfon-core/: Cargo.toml
crates/soomfon-core/src/: action.rs  config.rs  keyboard.rs  lib.rs  session.rs
crates/soomfon-device/: Cargo.toml
crates/soomfon-device/examples/: monitor.rs  render.rs
crates/soomfon-device/src/: input.rs  kind.rs  lib.rs  render.rs
packaging/udev/: 70-soomfon.rules  99-soomfon.rules
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.svelte  app.css
ui/src/lib/: ButtonEditor.svelte  KeyGrid.svelte  api.ts  config.ts
