[workspace]
resolver = "2"
members = ["crates/soomfon-device", "crates/soomfon-core", "src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
license = "GPL-3.0-or-later"
repository = "https://github.com/Traxxouu/soomfonLinux"
authors = ["Traxxouu"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
directories = "6"
tempfile = "3"
tokio = "1"
soomfon-device = { path = "crates/soomfon-device" }
soomfon-core = { path = "crates/soomfon-core" }

[profile.release]
strip = true
lto = true
