[package]
name = "soomfon-core"
description = "Core logic for soomfonLinux: device discovery, profiles and action dispatch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
directories.workspace = true
tokio = { workspace = true, features = ["time"] }
soomfon-device.workspace = true

[dev-dependencies]
tempfile.workspace = true
