[package]
name = "soomfon-device"
description = "Hardware layer for Soomfon (Mirabox/Ajazz OEM) stream deck devices"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
mirajazz = "0.6.1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
font8x8 = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
